--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
+        "animate.css": "^3.5.2",
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
@@ -33,10 +34,10 @@
         "ionic-angular": "3.4.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "moment": "^2.18.1",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12",
-        "moment": "^2.18.1"
+        "zone.js": "0.8.12"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
